@@ -7,8 +7,8 @@
 ## Title: |ceb00f1tralce|r's Collectible Keybinds
 ## Description: Add keybindings for Tools, Assistants, Companions, and Mementos.
 ## Author: @tralce and @code65536
-## Version: 2024-01-02
-## APIVersion: 101040
+## Version: 2024-03-07
+## APIVersion: 101041
 ## OptionalDependsOn: VotansKeybinder
 
 tralceCollectibles.lua
