@@ -1,3 +1,6 @@
+v2024-03-07
+Moved a bunch of mementos over to tralce's Vanity Keybinds. API increment.
+
 v2024-01-02
 Added Astral Aura Projector. Thanks, Rainbow_Stay!
 
